<resources>
    <string name="app_name">Prominent Colors</string>

    <!-- Main Prompt-->
    <string name="main_prompt">Select an image or use the camera to find a color!</string>

    <!-- Loading Screen -->
    <string name="loading_prompt">Scanning...</string>

    <!-- Results Page -->
    <string name="result_header">Most frequent color is...</string>
    <string name="color_rank">Rank ##</string>
    <string name="result_hexcode">#HexCode</string>
    <string name="result_col_count">Color Count</string>

    <!-- Button Texts -->
    <string name="select_image">Select Image</string>
    <string name="camera">Use Camera</string>
    <string name="copy_hexcode">Copy to Clipboard</string>
    <string name="use_again">Choose Another Image</string>
    <string name="confirm_image">Confirm</string>

    <!-- Toasts -->
    <string name="no_image">There is no image selected</string>

</resources>