<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/creme_white">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/app_name"
        android:textSize="36dp">
    </TextView>

    <TextView
        android:id="@+id/app_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/main_prompt"
        android:textSize="18dp">
    </TextView>

    <!-- Main Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Views are used for spacing between buttons -->
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.25"/>

        <!-- Select Image from Gallery -->
        <Button
            android:id="@+id/select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/gallery_icon"
            android:text="@string/select_image"></Button>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.5"/>

        <!-- Use Camera -->
        <Button
            android:id="@+id/camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/camera_icon"
            android:text="@string/camera"></Button>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.25"/>

    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_image"
        android:visibility="invisible">
    </Button>

    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="75pt"
        android:layout_height="75pt"
        android:scaleType="centerCrop">
    </ImageView>

</LinearLayout>